storing of logtypes in index in index
Signed-off-by: Petar Dzepina <petar.dzepina@gmail.com>